# cclg

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
adapters/claude/: settings.cclg.example.json
adapters/codex/: hooks.cclg.example.json  mcp.cclg.example.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  BENCH_SCORECARD.md  CCLG_CONTAINER.md  CCLG_CONTAINER_PLAN.md  CCLG_SPEC.md  CODEX_LOCAL_APPLY.md  CODE_GRAPH.md  DATA_MODEL.md  FORMAT.md  GATEMEM_OFFICE.md  PATCH_SEMANTICS.md  PUBLISHING.md  RESEARCH_NOTES.md  SCHIFT_AI_MEMORY_FORMAT.md  STANDARD.md  TOOLS_AND_HOOKS.md
docs/diagrams/: apm-cclg-multi-agent-session.excalidraw  apm-cclg-multi-agent-session.md
docs/explainer/: index.html
examples/: acmc_seed.jsonl
format/: cclg.format.v0.1.toml
scripts/: apply-local.sh  gatemem_office_mode1.py  gatemem_office_probe.py  gatemem_office_score_mode1.py  gatemem_rail_postprocess.py  gen_conformance.py  install.sh  publish-github.sh  uninstall.sh
scripts/gatemem_score_lib/: __init__.py  llm_clients.py  output_rail_hook.py
src/cclg/: __init__.py  bench.py  cli.py  codegraph.py  container.py  dense.py  format.py  gatemem_adapter.py  gatemem_lexical.py  gatemem_pack.py  grounding_rail.py  hooks.py  indexing.py  mcp_server.py  models.py  pack.py  patches.py  (+6 more)
tests/: test_cclg_core.py  test_conformance.py  test_container.py  test_gatemem_pack.py  test_grounding_rail.py  test_patches.py  test_prd_alignment.py  test_pull.py  test_push.py  test_rails_confirmation.py  test_rails_pii.py  test_rails_value_grounding.py  test_surfaces.py
(+35 files in other folders)
